--- a/Client(Frontend)/package.json
+++ b/Client(Frontend)/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "gsap": "^3.14.2",
     "lucide-react": "^0.575.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
